plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
    id 'com.diffplug.spotless' version "7.2.1"
}

jacoco {
	toolVersion = "0.8.13"
}

group = 'cloudflight.integra'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'com.fasterxml:classmate:1.5.1'

	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'
	testCompileOnly 'org.projectlombok:lombok:1.18.38'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:5.14.2'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.hibernate.orm:hibernate-core:6.2.6.Final"
	implementation "org.springframework.data:spring-data-jpa:"
	implementation "org.postgresql:postgresql:42.7.7"

	testImplementation "org.testcontainers:junit-jupiter:1.19.8"
	testImplementation "org.springframework.boot:spring-boot-test"
	testImplementation "org.springframework.boot:spring-boot-test-autoconfigure"
	testImplementation "org.springframework.boot:spring-boot-testcontainers"
	testImplementation "org.testcontainers:postgresql:1.19.8"

    testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
    java {
        eclipse().configFile(file("${rootDir}/codestyle.xml"))
        target 'src/**/*.java'
    }
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport, jacocoTestCoverageVerification
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'cloudflight/integra/backend/BackendApplication*'
			])
		}))
	}
}

jacocoTestCoverageVerification {
	dependsOn test
	violationRules {
		rule {
			element = 'PACKAGE'
			limit {[
					{
						counter = 'BRANCHES'
						value = 'COVEREDRATIO'
						minimum = 1
					},
					{
						counter = 'INSTRUCTIONS'
						value = 'COVEREDRATIO'
						minimum = 1
					}
			]
			}
		}
	}
}
